Add background chapter

--- a/thesis.tex
+++ b/thesis.tex
@@ -32,10 +32,11 @@
 \pagenumbering{arabic}
 %\linenumbers
 \input{chapters/1_introduction}
-\input{chapters/2_related_work}
-\input{chapters/3_methodology}
-\input{chapters/4_results}
+\input{chapters/2_background}
+\input{chapters/3_related_work}
+\input{chapters/4_methodology}
 \input{chapters/5_discussion}
+\input{chapters/6_results}
 
 %\nolinenumbers
 
