--- a/plots/rotation_matrix3D.tex
+++ b/plots/rotation_matrix3D.tex
@@ -1,9 +1,15 @@
 \begin{tikzpicture}
     % \draw[thin,gray!40] (-5,-5,0) grid (5,5,0);
-    \draw[-latex] (0,0,0) -- (2,0,0)node[anchor=west]{pet};
-    \draw[-latex] (0,0,0) -- (0,2,0)node[anchor=south]{furry};
-    \draw[-latex] (0,0,0) -- (0,0,2)node[anchor=north]{stroke};
-    \draw[blue,-latex] (0,0,0) -- (1,1,0)node[anchor=south west]{dog};
-    \draw[blue,-latex] (0,0,0) -- (1,0,1)node[anchor=north west]{snake};
-    \draw[blue,-latex] (0,0,0) -- (0.9,1.8,0.5)node[anchor=south]{cat};
+    \draw[-latex] (-5,0,0) -- (5,0,0)node[anchor=west]{$^{a}x$};
+    \draw[-latex] (0,-5,0) -- (0,5,0)node[anchor=south]{$^{a}y$};
+    \draw[-latex] (0,0,0) -- (0,0,5)node[anchor=north]{$^{a}z$};
+    \draw[line width=1pt,blue,-stealth](0,0,0)--(3,3,0) node[anchor=south west, scale=2]{$^{b}x$};
+    \draw[line width=1pt,blue,dashed](3,0,0)--(3,3,1) node[midway, right, scale=2]{$r_{xx}$};
+    \draw[line width=1pt,blue,dashed](0,3,0)--(3,3,1) node[midway, above, scale=2]{$r_{xy}$};
+    \draw[line width=1pt,green,-stealth](0,0,0)--(2,-4,1) node[anchor=north west, scale=2]{${^{b}z}$};
+    \draw[line width=1pt,green,dashed](0,-4,0)--(2,-4,1) node[midway, below, scale=2]{$r_{xx}$};
+    \draw[line width=1pt,green,dashed](2,0,0)--(2,-4,1) node[midway, right, scale=2]{$r_{xy}$};
+    \draw[line width=1pt,red,-stealth](0,0,0)--(-4,1,1) node[anchor=south east, scale=2]{${^{b}y}$};
+    \draw[line width=1pt,red,dashed](0,1,0)--(-4,1,1) node[midway, above, scale=2]{$r_{xx}$};
+    \draw[line width=1pt,red,dashed](-4,0,0)--(-4,1,1) node[midway, left, scale=2]{$r_{xy}$};
 \end{tikzpicture}
