--- a/thesis.tex
+++ b/thesis.tex
@@ -34,9 +34,10 @@
 \input{chapters/1_introduction}
 \input{chapters/2_background}
 \input{chapters/3_related_work}
-\input{chapters/4_methodology}
-\input{chapters/5_discussion}
-\input{chapters/6_results}
+\input{chapters/4_experimental_setup}
+\input{chapters/5_methodology}
+\input{chapters/6_discussion}
+\input{chapters/7_results}
 
 %\nolinenumbers
 
