--- a/settings.tex
+++ b/settings.tex
@@ -35,10 +35,10 @@
 \usepackage{balance}
 \usepackage{booktabs} % For prettier tables
 \usepackage{url}
-\usepackage{pgfgantt}
+\usepackage{pgf}
+\usepackage{pgfplots}
 \usepackage{tikz-3dplot}
 \usepackage{tikz}
-\usepackage{pgfplots}
 
 \DeclareUnicodeCharacter{2212}{-}
 
