--- a/thesis.tex
+++ b/thesis.tex
@@ -32,12 +32,19 @@
 \pagenumbering{arabic}
 %\linenumbers
 \input{chapters/1_introduction}
+\newpage
 \input{chapters/2_background}
+\newpage
 \input{chapters/3_related_work}
+\newpage
 \input{chapters/4_experimental_setup}
+\newpage
 \input{chapters/5_methodology}
+\newpage
 \input{chapters/6_discussion}
+\newpage
 \input{chapters/7_results}
+\newpage
 
 %\nolinenumbers
 
