Change to LuaTeX

--- a/settings.tex
+++ b/settings.tex
@@ -41,7 +41,7 @@
 \usepackage{tikz}
 \usepackage{listings}
 
-\DeclareUnicodeCharacter{2212}{-}
+% \DeclareUnicodeCharacter{2212}{-}
 
 
 \graphicspath{ {figures/} }
